--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>profil_saya</title>
+  <title>profil_saya - rizqi </title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!--konten yang akan terlihat oleh pengunjung-->
+  <img src ="foto-profil.jpg" alt="foto profil saya">
+  <h1>nama lengkap anda<h1>
+     <p>siswa smk yang tertarik dengan teknologi dan desain.
+      selamat datang di website pertama saya>< </p>
+    <a
+      href="https://www.instagram.com/username">kunjungi instagram saya</a>
+    
 </body>
 </html>
