--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
   <!--konten yang akan terlihat oleh pengunjung-->
+  <div class="kartu-profil"
   <img src ="foto-profil.jpg" alt="foto profil saya">
-  <h1>nama lengkap anda<h1>
-     <p>siswa smk yang tertarik dengan teknologi dan desain.
-      selamat datang di website pertama saya>< </p>
+    <h1>nama lengkap anda<h1>
+    <p>siswa smk yang tertarik dengan teknologi dan desain.selamat datang di website pertama saya>< </p>
     <a
       href="https://www.instagram.com/username">kunjungi instagram saya</a>
-    
+    </div>
 </body>
 </html>
