--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>profil_saya</title>
+  <title>profil saya</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
