--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="kartu-profil">
-    <img src ="foto-profil.jpg" alt="foto profil saya">
+    <img src="foto-profil.jpg" alt="Foto profil saya">
     <h1>nama lengkap anda<h1>
     <p>siswa smk yang tertarik dengan teknologi dan desain.selamat datang di website pertama saya! </p>
     <a
