--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     href="https://www.instagram.com/username">kunjungi instagram saya</a>
       <button id="sapabutton">Sapa Saya !</button>
     </div>
+      <script src="script.js"></script>
   </body>
 </html>
