--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>siswa smk yang tertarik dengan teknologi dan desain.selamat datang di website pertama saya! </p>
     <a
     href="https://www.instagram.com/username">kunjungi instagram saya</a>
-      <button id="sapabutton">Sapa Saya !</button>
+      <button id="sapButton">Sapa Saya !</button>
     </div>
       <script src="script.js"></script>
   </body>
