--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="kartu-profil">
     <img src="foto-profil.jpg" alt="Foto profil saya">
-    <h1>nama lengkap anda<h1>
+    <h1>Nama Lengkap Anda<h1>
     <p>siswa smk yang tertarik dengan teknologi dan desain.selamat datang di website pertama saya! </p>
     <a
     href="https://www.instagram.com/username">kunjungi instagram saya</a>
